--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<header class="bg-custom-blue text-white p-4">
+  <div class="container mx-auto flex justify-between items-center">
+    <!-- Логотип -->
+    <div class="logo">
+      <img src="assets/logo.png" alt="logo" class="h-8 w-auto max-w-logo">
+    </div>
+    <div class="logout">
+      <button class="text-white hover:text-gray-300">Вийти</button>
+    </div>
+  </div>
+</header>
